--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cortex Interaction</title>
+    <title>Cortex v0.0.0.3</title>
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
